--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                       <a class="nav-link text-warning border border-1 border-warning rounded-pill ps-4 pe-4 bg-black m-2" href="#"> <i class="bi bi-microsoft-teams"></i> &nbsp; @teamidea</a>
                     </li> 
                     <li class="nav-item">
-                      <a class="nav-link text-warning border border-1 border-warning rounded-pill ps-4 pe-4 bg-black m-2" href="#"> <i class="bi bi-database"></i> &nbsp; #services</a>
+                      <a class="nav-link text-warning border border-1 border-warning rounded-pill ps-4 pe-4 bg-black m-2" href="#faq"> <i class="bi bi-database"></i> &nbsp; #Faq</a>
                     </li>
             </ul>
         </div>
